# pi-fan

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  build.sh  build_pi-fan.sh  raspi4-32.cmake  raspi4.cmake
.devcontainer/: Dockerfile  devcontainer.json
binaries/: ReadMe.txt
binaries/sept-2019/: pi-fan
docs/: compiling_pi-fan.md  diagnosing.md  electrical_interface.md  systemd_install.md
include/: utils.h
prebuilt/: binaries.md
src/: main.c  utils.c
systemd/: pi-fan.service
